[package]
name = "dndx-forked-unix-udp-sock"
version = "0.6.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leshow/unix-udp-sock"
description = "async & sync UDP sockets supporting sendmsg/recvmsg and src IP manipulation"
keywords = ["udp", "async", "socket", "linux", "unix"]
categories = ["network-programming", "asynchronous"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
socket2 = "0.4"
tracing = "0.1"
tokio = { version = "1.19", features = ["net"] }
tokio-util = { version = "0.7", features = [ "codec", "net" ] }
bytes = "1"
futures-core = "0.3"
futures-sink = "0.3"
pin-project-lite = "0.2"
